GERONIMO-3900 Add runtime support for non-Sun JVMs.  Merged in updates from 2.1.1 branch.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@649215 13f79535-47bb-0310-9956-ffa450edef68